# HW1-FAST-AQ-Parser

./: pyproject.toml
.github/workflows/: main.yml
seqparser/: seq.py
tests/: test_parsers.py  test_transcribe.py
