[build-system]
requires = [
	"flit_core >=3.2,<4"
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
name = "seqparser"
authors = [{name = "Enock Niyonkuru", email = "enock.niyonkuru@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Home = "https://github.com/enockniyonkuru/HW1-FAST-AQ-Parser.git"